--- a/package.json
+++ b/package.json
@@ -5,15 +5,28 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server"
+    "build": "tsc --build",
+    "start": "node build/server.js"
+  },
+  "jest": {
+    "preset": "ts-jest/presets/js-with-ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.8.2",
     "express": "^4.18.2",
-    "ts-node": "^10.9.1"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.18"
+    "@types/express": "^4.17.18",
+    "@types/jest": "^29.5.5",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.4",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
